# lfbagel

./: .gitignore  Bagel  LICENSE  README.md  bagel_code.code-workspace  basler_model.characteristics  basler_model.datafile  env.sh  josh_model.characteristics  josh_model.datafile  josh_model.tree  lfbagel_model.characteristics  lfbagel_model.datafile  lfbagel_model.tree  rti.lft  trigger.sh
inc/: CMakeLists.txt  cmake-basler-extras.txt  cmake-bc-extras.txt  cmake-current-extras.txt  cmake-debug-extras.txt  cmake-extras.txt  cmake-heights-extras.txt  cmake-magnet-extras.txt  cmake-mdsput-extras.txt  cmake-mdsvalue-extras.txt  cmake-operation-time-extras.txt  cmake-unsigned_char_array_t-extras.txt  meson_options.txt
src/: ADS1X15.h  Adafruit_ADS1X15.cpp  Adafruit_ADS1X15.h  Adafruit_ADS1X15.hpp  Adafruit_VL6180X.cpp  Adafruit_VL6180X.h  Bagel.lf  Bagel2.lf  Basler.lf  Basler.lf.works  BaslerTest.lf  BaslerTest2.lf  CMakeLists.txt  CMakeLists.txt.saved  Constant.lf  Current.lf  CurrentTest.lf  Heights.lf  HeightsTest.lf  MDSPutSignals.lf  Magnet.lf  MdsPutFrame.hpp  MdsPutFrame.lf  MdsPutFrameTest.lf  MdsPutSignal.lf  MdsPutSignalTest.lf  MdsValue.lf  MdsValueTest.lf  Sensors.lf  SensorsTest.lf  ShutDownReactor.lf  TimerReactor.lf  TimerTest.lf  VL6180XSet.cpp  VL6180XSet.h  WRTDTrigger.lf  bagel.lf  bc.lf  bc2.lf  break.cpp  (+23 more)
src/mdsplus_library/: CMakeLists.txt  mdsplus_library.cpp  mdsplus_library.h
unused/: VL6180XSet.m
